# swarm-discovery

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: local.rs  multi_interface.rs
src/: guardian.rs  lib.rs  receiver.rs  sender.rs  socket.rs  updater.rs  utilities.rs
tests/: discovery.rs
tests/nixos/: drop-cleanup-test.nix  vlan-subinterface-test.nix  vm-test.nix
tests/nixos/test-node/: Cargo.toml
tests/nixos/test-node/src/: main.rs
