[package]
name = "swarm-discovery"
version = "0.3.0-alpha.1"
edition = "2021"
authors = ["Roland Kuhn"]
description = "Discovery service for IP-based swarms"
license = "Apache-2.0"
repository = "https://github.com/rkuhn/swarm-discovery"
readme = "README.md"
keywords = ["swarm", "discovery", "udp"]
categories = ["network-programming", "asynchronous"]
documentation = "https://docs.rs/swarm-discovery"

[features]
serde = ["dep:serde"]

[dependencies]
acto = { version = "0.7.0", features = ["tokio"] }
anyhow = "1.0.79"
hickory-proto = "=0.25.0-alpha.5"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"], optional = true }
socket2 = { version = "0.5.5", features = ["all"] }
tokio = { version = "1.35.1", features = ["macros", "net", "rt", "time"] }
tracing = "0.1.40"

[dev-dependencies]
if-addrs = "0.11.0"
ipc-channel = "0.18.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
netsim-embed = { version = "0.9.1", features = ["ipc"] }

[[test]]
name = "discovery"
harness = false
required-features = ["serde"]
