[package]
name = "swarm-discovery-test-node"
version = "0.1.0"
edition = "2021"

[dependencies]
if-addrs = "0.14.0"
libc = "0.2"
swarm-discovery = { path = "../../.." }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
